# kit

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  DEVELOPMENT_LOG.md  README.md  ROADMAP.md  ROADMAP_LOG.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: CLI.md
planning/: 2026-07-13-usability-improvements-implementation-plan.md  claude-skills-tauri-vue-app-plan.md  delivery-installation-and-updates-plan.md  production-readiness-audit-2026-03-18.md  usability-review-2026-07-13.md  v1-bug-check-implementation-notes.md
scripts/: install-cli.sh
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: domain.rs  lib.rs  linker.rs  main.rs  scanner.rs  state.rs  tray.rs  watcher.rs
src-tauri/src/commands/: activation.rs  assignment.rs  backup.rs  bootstrap.rs  changelog.rs  comparison.rs  external.rs  health.rs  library.rs  locations.rs  manifest.rs  mod.rs  repo.rs  sets.rs  sharing.rs  usage.rs  watcher.rs
src/assets/: global.css  tokens.css
src/composables/: useDismissedRecommendations.ts  useKeyboardShortcuts.ts  useRemoveLocation.ts  useTheme.ts
src/stores/: appStore.ts  assignmentStore.ts  bulkAssignStore.ts  changelogStore.ts  healthStore.ts  libraryStore.ts  locationsStore.ts  preferencesStore.ts  setsStore.ts  skillPeekStore.ts  usageStore.ts  watcherStore.ts
src/types/: index.ts
src/utils/: setKey.ts  statusLabels.ts
src/views/: ChangelogView.vue  CompareLocationsView.vue  HealthView.vue  HelpView.vue  (+9 more)
(+49 files in other folders)
